EC2_AS_NAT/vpc.tf
resource "aws_vpc" "first-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "first-vpc"
  }
}
